--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,9 @@ body {
 }
 .container__list {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container__list_item {
@@ -85,6 +88,28 @@ body {
   box-sizing: border-box;
   color: #ffffff;
   cursor: pointer;
+}
+
+.container__list_item_btn:hover {
+  color: blueviolet;
+}
+
+.remove-btn {
+  appearance: none;
+  background-color: #460000;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 5px;
+  color: #ffffff;
+  cursor: pointer;
+  width: 100px;
+  text-align: center;
+}
+
+.remove-btn:hover {
+  filter: brightness(1.5);
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transform: translateY(2px);
 }
 
 .container__list_item_btn:hover {
